# libUvulaLE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  libuvula.cpp
.github/workflows/: conan-package.yml  update-fork.yml
cli/: CMakeLists.txt  cli.cpp
include/: Face.h  Matrix.h  UVCoord.h  Vector.h  Vertex.h  geometry_utils.h  lscm_unwrap.h  unwrap.h  unwrap.hpp  xatlas.h
pyUvula/: CMakeLists.txt  pyUvula.cpp
src/: Matrix.cpp  Vector.cpp  geometry_utils.cpp  lscm_unwrap.cpp  unwrap.cpp  xatlas.cpp
